; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/esp_timer/main/extr_esp_timer_example_main.c_oneshot_timer_callback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/esp_timer/main/extr_esp_timer_example_main.c_oneshot_timer_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"One-shot timer called, time since boot: %lld us\00", align 1
@.str.1 = private unnamed_addr constant [66 x i8] c"Restarted periodic timer with 1s period, time since boot: %lld us\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @oneshot_timer_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oneshot_timer_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32 (...) @esp_timer_get_time()
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @TAG, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @ESP_LOGI(i32 %6, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i8*, i8** %2, align 8
  %10 = ptrtoint i8* %9 to i32
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @esp_timer_stop(i32 %11)
  %13 = call i32 @ESP_ERROR_CHECK(i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @esp_timer_start_periodic(i32 %14, i32 1000000)
  %16 = call i32 @ESP_ERROR_CHECK(i32 %15)
  %17 = call i32 (...) @esp_timer_get_time()
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* @TAG, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @ESP_LOGI(i32 %18, i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  ret void
}

declare dso_local i32 @esp_timer_get_time(...) #1

declare dso_local i32 @ESP_LOGI(i32, i8*, i32) #1

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_timer_stop(i32) #1

declare dso_local i32 @esp_timer_start_periodic(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
